Fix sonar issues
- fixing sonar issues on code to generate a new common artifact
with parent new dependencies.

Issue-ID: POLICY-5240
Change-Id: I47b2ace072708e576d5fc5a82c2419925cbed7ed
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>